--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
          <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-               <h4 class="text-center">Grade Design merupakan usaha yang bergerak dalam bidang Desan dan Percetakan yang berdiri sejak tahun 2017. Beralamat di Jalan Karanggede, Juwangi KM.10, Kabupaten Boyolali</h4>
+               <h4 class="text-center">Grade Design merupakan usaha yang bergerak dalam bidang Desain dan Percetakan yang berdiri sejak tahun 2017. Beralamat di Jalan Karanggede, Juwangi KM.10, Kabupaten Boyolali</h4>
             </div>
          </div><br>
 
