--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                <li><a href="#pelayanan" class="page-scroll">Our Services</a></li>
                <li><a href="#portfolio" class="page-scroll">Portfolio</a></li>
                <li><a href="#find" class="page-scroll">Find US</a></li>
+               <li><a href="#cont" class="page-scroll">Contact US</a></li>
             </ul>
          </div>
       </div>
@@ -70,7 +71,7 @@
 
          <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-               <h4 class="text-center">Grade Design merupakan usaha yang bergerak dalam bidang Desain dan Percetakan yang berdiri sejak tahun 2017. Beralamat di Jalan Karanggede, Juwangi KM.10, Kabupaten Boyolali</h4>
+               <h4 class="text-center">Grade Design merupakan usaha yang bergerak dalam bidang Desan dan Percetakan yang berdiri sejak tahun 2017. Beralamat di Jalan Karanggede, Juwangi KM.10, Kabupaten Boyolali</h4>
             </div>
          </div><br>
 
@@ -105,18 +106,6 @@
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lQlV4g2v0JM?rel=0" allowfullscreen></iframe>
                   </div>
             </div>
-            <!-- <div class="row justify-content-center">
-                  <div class="col text-center">
-                        <h4>Grade Design</h4>
-                        <img src="img/4.jpg" width="150" class="img-circle img-thumbnail">
-                        <p>7000 Subscribers.</p>
-                        <div class="row"> -->
-                           <!-- <div class="col sm-8"> -->
-
-                           <!-- </div> -->
-                        <!-- </div>
-                  </div>
-            </div> -->
          </div>
 
          
@@ -137,84 +126,6 @@
                <hr>
             </div>
          </div>
-
-
-         <!-- <div class="row">
-            <div class="col-sm-2 col-sm-offset-2">
-               <div>
-                  <img src="images/BIRU.png">
-                  <h4 class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit!</h4>
-               </div>
-            </div>
-
-           <div class="col-sm-1"></div>
-
-            <div class="col-sm-2">
-               <div>
-                  <i class="fa fa-laptop"></i>
-                     <h4 class="text-center">Lorem, ipsum dolor sit amet !</h4>
-               </div>
-            </div>
-
-            <div class="col-sm-1"></div>
-
-            <div class="col-sm-2">
-                  <div>
-                     <img src="images/BIRU.png">
-                     <h4 class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit!</h4>
-                  </div>
-            </div>
-
-            <div class="col-sm-2 col-sm-offset-2">
-                  <div >
-                     <img src="img/Capture.PNG">
-                     <h4 class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit!</h4>
-                  </div>
-               </div>
-   
-              <div class="col-sm-1"></div>
-   
-               <div class="col-sm-2">
-                  <div>
-                        <img src="img/4.jpg">
-                        <h4 class="text-center">Lorem, ipsum dolor sit amet !</h4>
-                  </div>
-               </div>
-   
-               <div class="col-sm-1"></div>
-   
-               <div class="col-sm-2">
-                     <div>
-                        <img src="img/4.jpg">
-                        <h4 class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit!</h4>
-                     </div>
-               </div>
-
-               <div class="col-sm-2 col-sm-offset-2">
-                  <div>
-                     <img src="img/4.jpg" >
-                     <h4 class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit!</h4>
-                  </div>
-               </div>
-
-               <div class="col-sm-1"></div>
-
-                  <div class="col-sm-2">
-                     <div>
-                           <img src="img/4.jpg">
-                           <h4 class="text-center">Lorem, ipsum dolor sit amet !</h4>
-                     </div>
-                  </div>
-
-                  <div class="col-sm-1"></div>
-
-                  <div class="col-sm-2">
-                        <div>
-                           <img src="img/4.jpg">
-                           <h4 class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit!</h4>
-                        </div>
-                  </div> -->
-
                    <div class="row">
                         <div class="col-md-4">
                           <div class="services-box">
@@ -389,10 +300,36 @@
       </div>
    </section>
 
+
+   <section class="cont" id="cont">
+      <div class="container text-center">
+        <h1>Contact Us</h1>
+
+
+        <div class="row">
+          <div class="col-md-4">
+              <i class="fa fa-phone"></i>
+                <p>+62 85799656887</p>
+          </div>
+          <div class="col-md-4">
+              <i class="fa fa-envelope"></i>
+                <p>gradedesign123@gmail.com</p>
+          </div>
+          <div class="col-md-4">
+            <a href="https://www.instagram.com/gradedesain/"><i class="fa fa-instagram"></i>
+                <p>gradedesain</p></a>
+          </div>
+
+
+        </div>
+        </div>
+      </section>
+
+
    <!-- Akhir Temukan Kami -->
 
    <!-- WhatsApp -->
-   <a href="https://api.whatsapp.com/send?phone=+62 85720335323&text=Hubungi Grade Design Via Chat Whatsapp." class="float" target="_blank">
+   <a href="https://api.whatsapp.com/send?phone=+62 85799656887&text=" class="float" target="_blank">
       <i class="fa fa-whatsapp my-float"></i>
       </a>
    <!-- Akhir WhatsApp -->
@@ -406,17 +343,6 @@
                <p>
                   <i class="glyphicon glyphicon-copyright-mark copyrightColor"></i>Copyright 2019 | Built with <i class="glyphicon glyphicon-heart"></i>. <a href="https://www.instagram.com/gradedesain/">Grade Design</a>
                </p>
-            </div>
-
-            <div class="row">
-               <div class="col-sm-3 col-sm-offset-3">
-                  <a href="#" class="btn btn-success emailColor"> <i class="glyphicon glyphicon-envelope"></i> gradedesign123@gmail.com</a>
-               </div>
-
-
-               <div class="col-sm-3">
-                  <a href="https://www.instagram.com/gradedesain/" class="btn btn-success instagramColor"> <i class="glyphicon glyphicon-camera"></i> instagram : gradedesign</a>
-               </div>
             </div>
          </div>
       </div>
